[update] pytorch notebooks

--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,22 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-0.250919762305275, 0.9014286128198323)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a, b = np.random.uniform(low=-1.0, high=1.0, size=2)\n",
+    "a, b = np.random.uniform(low=-2.0, high=2.0, size=2)\n",
     "a, b"
    ]
   },
@@ -156,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,24 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "562f37106e764763818d1146ec3f6d18",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -318,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,20 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('0.weight', 0.7645385265350342), ('0.bias', 0.8300079107284546)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[(name, tensor.item()) for (name, tensor) in model.named_parameters()]"
    ]
@@ -370,20 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([5000, 1]), torch.Size([5000]))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xx = torch.from_numpy(x).unsqueeze(-1)\n",
     "yy = torch.from_numpy(y_noisy)\n",
@@ -409,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,24 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f6caa5a91504bc7b9a9aa621c078305",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, axes = plt.subplots(nrows=2, figsize=(6, 6), gridspec_kw={'height_ratios':[0.7, 0.3]})\n",
     "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.25, label='y_noisy')\n",
@@ -492,17 +429,7 @@
     "\n",
     "$\\text{MSE} = \\frac{1}{n} \\sum_{i = 1}^{n} (Y_i - \\hat{Y_i})^2$\n",
     "\n",
-    "For every data sample $i$, we compute squared difference of the target value $Y_i$ and the predicted value $\\hat{Y_i}$. The squared differences are then added up accross all sample and divided by the number of samples to yield a single scalar value, the MSE."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#loss_fn = torch.nn.MSELoss(reduction='sum')\n",
-    "loss_fn = torch.nn.MSELoss()"
+    "For every data sample $i$, we compute the squared difference of the target value $Y_i$ and the predicted value $\\hat{Y_i}$. The squared differences are then added up accross all sample and divided by the number of samples to yield a single scalar value, the MSE."
    ]
   },
   {
@@ -510,228 +437,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Plotting the Weight Landscape"
+    "loss_fn = torch.nn.MSELoss(reduction='sum')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.manual_seed(seed); # for reproducibility\n",
-    "\n",
-    "model = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(1, 1),\n",
-    "    torch.nn.Flatten(0, 1)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_mesh = 200\n",
-    "\n",
-    "xv, yv = np.meshgrid(\n",
-    "    np.linspace(a - 5, a + 5, n_mesh), \n",
-    "    np.linspace(b - 5, b + 5, n_mesh))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((200, 200), (200, 200))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xv.shape, yv.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xxv = torch.from_numpy(xv)\n",
-    "yyv = torch.from_numpy(yv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zzz = torch.zeros_like(xxv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    for i, (a, b) in enumerate(zip(xxv.flatten(), yyv.flatten())):\n",
-    "        pa, pb = model.parameters()\n",
-    "        pa.copy_(torch.tensor([[a]]))\n",
-    "        pb.copy_(torch.tensor([b]))\n",
-    "        loss = loss_fn(model(xx), yy)\n",
-    "        zzz.flatten()[i] = loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e4ae9b152224a4098099195388e1a07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib import cm\n",
-    "from matplotlib.ticker import LinearLocator, LogLocator, FormatStrFormatter\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.gca(projection='3d')\n",
-    "\n",
-    "# Plot the surface.\n",
-    "min_loss = zzz.min().item()\n",
-    "max_loss = zzz.max().item()\n",
-    "surf = ax.plot_surface(xxv.numpy(), yyv.numpy(), zzz.numpy(),\n",
-    "                       cmap=cm.magma,\n",
-    "                       norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "                       antialiased=False)\n",
-    "\n",
-    "idx_min = zzz.argmin()\n",
-    "ax.scatter3D(xxv.flatten()[idx_min], yyv.flatten()[idx_min], zzz.flatten()[idx_min], c='r',  zorder=10)\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01a663df120d486da29f0949cddd1df9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0, 0.5, 'b')"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from numpy import ma\n",
-    "from matplotlib import ticker, cm\n",
-    "\n",
-    "# Automatic selection of levels works; setting the\n",
-    "# log locator tells contourf to use a log scale:\n",
-    "fig, ax = plt.subplots()\n",
-    "cs = ax.contourf(xxv.numpy(), yyv.numpy(), zzz.numpy(), \n",
-    "                \n",
-    "                levels=np.logspace(np.log10(min_loss), np.log10(max_loss), 50),\n",
-    "                 #levels=np.linspace(min_loss, max_loss, 50),\n",
-    "                norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "                 #locator=ticker.LogLocator(),\n",
-    "                 cmap=cm.magma,\n",
-    "                )\n",
-    "\n",
-    "idx_min = zzz.argmin()\n",
-    "ax.scatter(xxv.flatten()[idx_min], yyv.flatten()[idx_min], c='r')\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "#cbar = fig.colorbar(cs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(-2.6723, dtype=torch.float64), tensor(1.1206, dtype=torch.float64))"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -784,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +548,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = next(model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +588,8 @@
     "model[0].reset_parameters()\n",
     "set_plot_data(model(xx).detach().numpy(), losses[:1])\n",
     "\n",
-    "for t in range(n_training_steps):\n",
+    "\n",
+    "for t in range(n_training_steps):       \n",
     "    # run forward pass\n",
     "    y_pred = model(xx)\n",
     "    \n",
@@ -916,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,14 +662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_training_steps = 100\n",
+    "n_training_steps = 200\n",
     "\n",
     "loss_fn = torch.nn.MSELoss()\n",
     "losses = np.ones(n_training_steps) * np.infty\n",
+    "\n",
+    "#parameters = np.zeros((n_training_steps, 2))\n",
     "\n",
     "torch.manual_seed(seed)\n",
     "model[0].reset_parameters()\n",
@@ -942,11 +680,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for t in range(n_training_steps):\n",
+    "    #parameters[t] = [p.item() for p in model.parameters()]\n",
+    "    \n",
     "    # run forward pass\n",
     "    y_pred = model(xx)\n",
     "    \n",
@@ -955,7 +695,7 @@
     "\n",
     "    # update plots if needed\n",
     "    losses[t] = loss.item()\n",
-    "    if update_every(t, 2):\n",
+    "    if update_every(t, 5):\n",
     "        set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
     "\n",
     "    # zero out any previous gradients\n",
@@ -979,40 +719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.2520546019077301, 0.8988739848136902]"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[param[1].item() for param in model.named_parameters()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.250919762305275, 0.9014286128198323]"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[a, b] # target parameters"
    ]
@@ -1023,6 +741,178 @@
    "source": [
     "For visualization of the behaviour of different optimizers, check out [this](https://distill.pub/2017/momentum/), [this](https://bl.ocks.org/EmilienDupont/aaf429be5705b219aaaf8d691e27ca87) and [this](https://ikocabiyik.com/blog/en/visualizing-ml-optimizers/)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting the Weight Landscape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(seed); # for reproducibility\n",
+    "\n",
+    "model = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(1, 1),\n",
+    "    torch.nn.Flatten(0, 1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_mesh = 200\n",
+    "\n",
+    "xv, yv = np.meshgrid(\n",
+    "    np.linspace(a - 2, a + 2, n_mesh), \n",
+    "    np.linspace(b - 2, b + 2, n_mesh))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xv.shape, yv.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xxv = torch.from_numpy(xv)\n",
+    "yyv = torch.from_numpy(yv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zzz = torch.zeros_like(xxv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    for i, (a_, b_) in enumerate(zip(xxv.flatten(), yyv.flatten())):\n",
+    "        pa, pb = model.parameters()\n",
+    "        pa.copy_(torch.tensor([[a_]]))\n",
+    "        pb.copy_(torch.tensor([b_]))\n",
+    "        loss = loss_fn(model(xx), yy)\n",
+    "        zzz.flatten()[i] = loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import matplotlib as mpl\n",
+    "from matplotlib import cm\n",
+    "from matplotlib.ticker import LinearLocator, LogLocator, FormatStrFormatter\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.gca(projection='3d')\n",
+    "\n",
+    "# Plot the surface.\n",
+    "min_loss = zzz.min().item()\n",
+    "max_loss = zzz.max().item()\n",
+    "surf = ax.plot_surface(xxv.numpy(), yyv.numpy(), zzz.numpy(),\n",
+    "                       cmap=cm.inferno,\n",
+    "                       norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss),\n",
+    "                       antialiased=False)\n",
+    "\n",
+    "idx_min = zzz.argmin()\n",
+    "ax.scatter3D(xxv.flatten()[idx_min], yyv.flatten()[idx_min], zzz.flatten()[idx_min], c='r',  zorder=10)\n",
+    "\n",
+    "ax.set_xlabel('a')\n",
+    "ax.set_ylabel('b')\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from numpy import ma\n",
+    "from matplotlib import ticker, cm\n",
+    "\n",
+    "# Automatic selection of levels works; setting the\n",
+    "# log locator tells contourf to use a log scale:\n",
+    "fig, ax = plt.subplots()\n",
+    "cs = ax.contourf(xxv.numpy(), yyv.numpy(), zzz.numpy(), \n",
+    "                \n",
+    "                levels=np.logspace(np.log10(min_loss), np.log10(max_loss), 50),\n",
+    "                 #levels=np.linspace(min_loss, max_loss, 50),\n",
+    "                norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss),\n",
+    "                 #locator=ticker.LogLocator(),\n",
+    "                 cmap=cm.inferno,\n",
+    "                )\n",
+    "\n",
+    "idx_min = zzz.argmin()\n",
+    "ax.scatter(xxv.flatten()[idx_min], yyv.flatten()[idx_min], c='r')\n",
+    "\n",
+    "ax.set_xlabel('a')\n",
+    "ax.set_ylabel('b')\n",
+    "#cbar = fig.colorbar(cs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ax.plot(parameters[:, 0], parameters[:, 1], linewidth=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
