[update] notebooks and remove some unused helpers

--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -66,6 +66,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,20 +91,6 @@
    "metadata": {},
    "source": [
     "## Creating our Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import numpy as np\n",
-    "import torch"
    ]
   },
   {
@@ -109,11 +109,13 @@
     "\n",
     "The _parameters_ are what we want our model to learn.\n",
     "\n",
-    "Let's create an arbitrary line function by generating some random values for $a$ and $b$.\n",
+    "Let's create our target line function by generating some random values for $a$ and $b$.\n",
     "\n",
-    "When developing algorithms that contain any kind of randomness, for reproducibility it is always a good idea to set a _manual seed_ before you start. This will initialize the random number generators to the same state every time you run your experiment, i.e. you will always get the same results.\n",
     "\n",
-    "In NumPy, you can do this by passing an arbitrary number to the function `numpy.random.seed()`."
+    "> When developing algorithms that contain any kind of randomness, for reproducibility it is always a good idea to set a _manual seed_ before you\n",
+    "start. This will initialize the random number generators to the same state every time you run your experiment, i.e. you will always get the same results. \n",
+    ">\n",
+    "> In NumPy, you can do this by passing an arbitrary number to the function `numpy.random.seed()`."
    ]
   },
   {
@@ -166,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 5000\n",
+    "n_samples = 1000\n",
     "\n",
     "x = np.linspace(-np.pi, np.pi, n_samples, dtype=np.float32)"
    ]
@@ -175,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be.\n",
+    "> Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be.\n",
     "\n",
     "Let's create our _dependent variable_ $y$ by passing $x$ to our function $f$:"
    ]
@@ -211,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = np.random.normal(size=y_true.shape).astype(np.float32)\n",
+    "e = np.random.normal(size=y_true.shape, scale=0.5).astype(np.float32)\n",
     "y_noisy = y_true + e"
    ]
   },
@@ -274,7 +276,7 @@
    "source": [
     "We have $n$ inputs $x_1, x_2, \\dots, x_n$, each of which is multiplied by its corresponding weight $w_1, w_2, \\dots, w_n$. The output $y$ is the weighted sum of all inputs plus a single bias term $b$.\n",
     "\n",
-    "For our specific case, we can simplify this to:\n",
+    "For our specific case, it looks even simpler:\n",
     "\n",
     "<img src=\"../assets/images/linear_unit_single.svg\" alt=\"Linear unit with a single input\" width=\"400px\"/>\n",
     "\n",
@@ -365,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_training_steps = 100"
+    "n_training_steps = 200"
    ]
   },
   {
@@ -377,7 +379,7 @@
     "fig, axes = plt.subplots(nrows=2, figsize=(6, 6), gridspec_kw={'height_ratios':[0.7, 0.3]})\n",
     "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.25, label='y_noisy')\n",
     "axes[0].plot(x, y_true, linewidth=1, label='y_true', color='#455a64')\n",
-    "axes[0].set_title('Step 0')\n",
+    "axes[0].set_title('Epoch 0')\n",
     "line_pred = axes[0].plot(x, model(xx).detach().numpy(), label='y_pred', color='#ffa000')[0]\n",
     "line_loss = axes[1].semilogy(np.arange(n_training_steps)[0], 1000, label='training loss')[0]\n",
     "axes[1].set_xlim([0, n_training_steps])\n",
@@ -395,7 +397,7 @@
     "def set_plot_data(y_pred, loss):\n",
     "    line_pred.set_ydata(y_pred)\n",
     "    line_loss.set_data(np.arange(loss.shape[0]), loss)\n",
-    "    axes[0].set_title(f'Epoch {t}: loss {loss[-1]:.2f}')\n",
+    "    axes[0].set_title(f'Epoch {loss.size - 1}: loss {loss[-1]:.5f}')\n",
     "    axes[1].set_xlim([0, n_training_steps])\n",
     "    axes[1].relim()\n",
     "    axes[1].autoscale_view()\n",
@@ -431,29 +433,6 @@
     "\n",
     "For every data sample $i$, we compute the squared difference of the target value $Y_i$ and the predicted value $\\hat{Y_i}$. The squared differences are then added up accross all sample and divided by the number of samples to yield a single scalar value, the MSE."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss_fn = torch.nn.MSELoss(reduction='sum')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -496,167 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 1e-5\n",
-    "\n",
-    "n_training_steps = 100\n",
-    "losses = np.ones(n_training_steps) * np.infty\n",
-    "\n",
-    "torch.manual_seed(seed)\n",
-    "model[0].reset_parameters()\n",
-    "\n",
-    "t = 0\n",
-    "set_plot_data(model(xx).detach().numpy(), losses[:1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t += 1\n",
-    "\n",
-    "# run forward pass\n",
-    "y_pred = model(xx)\n",
-    "\n",
-    "# calculate loss\n",
-    "loss = loss_fn(y_pred, yy)\n",
-    "\n",
-    "# update plots\n",
-    "losses[t] = loss.item()\n",
-    "if update_every(t, 1):\n",
-    "    set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
-    "\n",
-    "# zero out any previous gradients\n",
-    "model.zero_grad()\n",
-    "\n",
-    "# compute gradient of loss w.r.t model parameters\n",
-    "loss.backward()\n",
-    "\n",
-    "# update the parameters using SGD\n",
-    "with torch.no_grad():\n",
-    "    for param in model.parameters():\n",
-    "        param -= learning_rate * param.grad"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's actually go ahead and turn this into a loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = next(model.parameters())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learning_rate = 1e-3\n",
-    "\n",
-    "n_training_steps = 1000\n",
-    "losses = np.ones(n_training_steps) * np.infty\n",
-    "\n",
-    "torch.manual_seed(seed)\n",
-    "model[0].reset_parameters()\n",
-    "set_plot_data(model(xx).detach().numpy(), losses[:1])\n",
-    "\n",
-    "\n",
-    "for t in range(n_training_steps):       \n",
-    "    # run forward pass\n",
-    "    y_pred = model(xx)\n",
-    "    \n",
-    "    # calculate loss\n",
-    "    loss = loss_fn(y_pred, yy)\n",
-    "\n",
-    "    # update plots if needed\n",
-    "    losses[t] = loss.item()\n",
-    "    if update_every(t, 10):\n",
-    "        set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
-    "\n",
-    "    # zero out any previous gradients\n",
-    "    model.zero_grad() \n",
-    "    \n",
-    "    # compute gradient of loss w.r.t model parameters\n",
-    "    loss.backward() \n",
-    "\n",
-    "    # update parameters\n",
-    "    with torch.no_grad():\n",
-    "        for param in model.parameters():\n",
-    "            param -= learning_rate * param.grad\n",
-    "            \n",
-    "set_plot_data(y_pred.detach().numpy(), losses)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use `IPython.display` to display a png copy of our figure:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(fig)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using Optimizers\n",
-    "\n",
-    "We can use optimizers to perform the parameter update step automatically."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learning_rate = 1e-5\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learning_rate = 0.03\n",
+    "learning_rate = 0.0175\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
    ]
   },
@@ -666,12 +485,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_training_steps = 200\n",
-    "\n",
     "loss_fn = torch.nn.MSELoss()\n",
     "losses = np.ones(n_training_steps) * np.infty\n",
     "\n",
-    "#parameters = np.zeros((n_training_steps, 2))\n",
+    "params_and_loss = torch.zeros((n_training_steps, 3))\n",
     "\n",
     "torch.manual_seed(seed)\n",
     "model[0].reset_parameters()\n",
@@ -685,27 +502,23 @@
    "outputs": [],
    "source": [
     "for t in range(n_training_steps):\n",
-    "    #parameters[t] = [p.item() for p in model.parameters()]\n",
+    "    y_pred = model(xx) # run forward pass\n",
     "    \n",
-    "    # run forward pass\n",
-    "    y_pred = model(xx)\n",
-    "    \n",
-    "    # calculate loss\n",
-    "    loss = loss_fn(y_pred, yy)\n",
+    "    loss = loss_fn(y_pred, yy) # calculate loss\n",
     "\n",
+    "    # record current parameter values and loss\n",
+    "    params_and_loss[t] = torch.tensor([*[p.detach() for p in model.parameters()], loss.detach()])\n",
+    "    \n",
     "    # update plots if needed\n",
     "    losses[t] = loss.item()\n",
-    "    if update_every(t, 5):\n",
+    "    if update_every(t, 2):\n",
     "        set_plot_data(y_pred.detach().numpy(), losses[:t+1])\n",
     "\n",
-    "    # zero out any previous gradients\n",
-    "    optimizer.zero_grad() \n",
+    "    optimizer.zero_grad() # zero out any previous gradients\n",
     "    \n",
-    "    # compute gradient of loss w.r.t model parameters\n",
-    "    loss.backward() \n",
-    "\n",
-    "    # update parameters\n",
-    "    optimizer.step()\n",
+    "    loss.backward() # compute gradient of loss w.r.t model parameters\n",
+    "    \n",
+    "    optimizer.step() # update parameters\n",
     "    \n",
     "set_plot_data(y_pred.detach().numpy(), losses)"
    ]
@@ -723,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[param[1].item() for param in model.named_parameters()]"
+    "[param.item() for param in model.parameters()]"
    ]
   },
   {
@@ -739,13 +552,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For visualization of the behaviour of different optimizers, check out [this](https://distill.pub/2017/momentum/), [this](https://bl.ocks.org/EmilienDupont/aaf429be5705b219aaaf8d691e27ca87) and [this](https://ikocabiyik.com/blog/en/visualizing-ml-optimizers/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Plotting the Weight Landscape"
    ]
   },
@@ -755,53 +561,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.manual_seed(seed); # for reproducibility\n",
+    "model[0].reset_parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_mesh = 50\n",
     "\n",
-    "model = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(1, 1),\n",
-    "    torch.nn.Flatten(0, 1)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_mesh = 200\n",
-    "\n",
-    "xv, yv = np.meshgrid(\n",
-    "    np.linspace(a - 2, a + 2, n_mesh), \n",
-    "    np.linspace(b - 2, b + 2, n_mesh))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xv.shape, yv.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xxv = torch.from_numpy(xv)\n",
-    "yyv = torch.from_numpy(yv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zzz = torch.zeros_like(xxv)"
+    "xv, yv = torch.meshgrid(torch.linspace(a - 2, a + 2, n_mesh), torch.linspace(b - 2, b + 2, n_mesh))\n",
+    "zv = torch.zeros_like(xv)"
    ]
   },
   {
@@ -811,12 +583,12 @@
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    for i, (a_, b_) in enumerate(zip(xxv.flatten(), yyv.flatten())):\n",
+    "    for i, (x, y) in enumerate(zip(xv.flatten(), yv.flatten())):\n",
     "        pa, pb = model.parameters()\n",
-    "        pa.copy_(torch.tensor([[a_]]))\n",
-    "        pb.copy_(torch.tensor([b_]))\n",
+    "        pa.copy_(x.reshape(pa.shape))\n",
+    "        pb.copy_(y.reshape(pb.shape))\n",
     "        loss = loss_fn(model(xx), yy)\n",
-    "        zzz.flatten()[i] = loss"
+    "        zv.flatten()[i] = loss"
    ]
   },
   {
@@ -826,26 +598,23 @@
    "outputs": [],
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib import cm\n",
-    "from matplotlib.ticker import LinearLocator, LogLocator, FormatStrFormatter\n",
     "\n",
     "fig = plt.figure()\n",
-    "ax = fig.gca(projection='3d')\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
-    "# Plot the surface.\n",
-    "min_loss = zzz.min().item()\n",
-    "max_loss = zzz.max().item()\n",
-    "surf = ax.plot_surface(xxv.numpy(), yyv.numpy(), zzz.numpy(),\n",
-    "                       cmap=cm.inferno,\n",
-    "                       norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss),\n",
-    "                       antialiased=False)\n",
+    "min_loss = zv.min().item()\n",
+    "max_loss = zv.max().item()\n",
+    "ax.plot_surface(\n",
+    "    xv.numpy(), yv.numpy(), zv.numpy(),\n",
+    "    cmap=mpl.cm.inferno,\n",
+    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
+    "    antialiased=False)\n",
     "\n",
-    "idx_min = zzz.argmin()\n",
-    "ax.scatter3D(xxv.flatten()[idx_min], yyv.flatten()[idx_min], zzz.flatten()[idx_min], c='r',  zorder=10)\n",
+    "ax.plot(*params_and_loss.T, zorder=20, color='white')\n",
     "\n",
     "ax.set_xlabel('a')\n",
     "ax.set_ylabel('b')\n",
+    "ax.set_zlabel('MSE')\n",
     "fig.tight_layout()"
    ]
   },
@@ -854,65 +623,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from numpy import ma\n",
-    "from matplotlib import ticker, cm\n",
-    "\n",
-    "# Automatic selection of levels works; setting the\n",
-    "# log locator tells contourf to use a log scale:\n",
     "fig, ax = plt.subplots()\n",
-    "cs = ax.contourf(xxv.numpy(), yyv.numpy(), zzz.numpy(), \n",
-    "                \n",
-    "                levels=np.logspace(np.log10(min_loss), np.log10(max_loss), 50),\n",
-    "                 #levels=np.linspace(min_loss, max_loss, 50),\n",
-    "                norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss),\n",
-    "                 #locator=ticker.LogLocator(),\n",
-    "                 cmap=cm.inferno,\n",
-    "                )\n",
-    "\n",
-    "idx_min = zzz.argmin()\n",
-    "ax.scatter(xxv.flatten()[idx_min], yyv.flatten()[idx_min], c='r')\n",
+    "cs = ax.contourf(\n",
+    "    xv.numpy(), yv.numpy(), zv.numpy(), \n",
+    "    levels=np.logspace(np.log10(min_loss), np.log10(max_loss), n_mesh),\n",
+    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
+    "    cmap=mpl.cm.inferno)\n",
+    "ax.plot(*params_and_loss.T[:2], color='white', label='model params')\n",
+    "ax.scatter(a, b, color='red', label='target')\n",
+    "ax.text(*(params_and_loss[0, :2] + 0.01), 'initial', color='white')\n",
+    "ax.text(*(params_and_loss[-1, :2] - 0.01), 'final', color='white', ha='right')\n",
     "\n",
     "ax.set_xlabel('a')\n",
     "ax.set_ylabel('b')\n",
-    "#cbar = fig.colorbar(cs)"
+    "ax.set_title('Model parameter trajectory during training')\n",
+    "ax.legend();\n",
+    "fig.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ax.plot(parameters[:, 0], parameters[:, 1], linewidth=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameters.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
