--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "# Training Phase\n",
     "\n",
-    "Instead of training a model entirely from scratch, we will use the concept of [_transfer learning_](https://en.wikipedia.org/wiki/Transfer_learning). This means we are starting with a pretrained model from a different but related problem and _fine tuning_ it to our specific problem.\n",
+    "Instead of training a model entirely from scratch, we will use the concept of [_transfer learning_](https://en.wikipedia.org/wiki/Transfer_learning). This means we start with a pretrained model from a different but related problem and _fine tune_ it to our specific problem.\n",
     "\n",
     "Many of the break-through achievements in deep learning are coming from the domain of computer vision (e.g. image classification). By transforming audio into images (spectrograms) we can use those very same networks to perform audio classification."
    ]
