--- a/notebooks/0_intro_machine_learning.ipynb
+++ b/notebooks/0_intro_machine_learning.ipynb
@@ -2,72 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "indian-accident",
+   "id": "continuous-democracy",
    "metadata": {},
    "source": [
-    "# Introduction to Machine Learning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bright-capability",
-   "metadata": {},
-   "source": [
-    "## Attribution\n",
-    "\n",
-    "Most of the material in the theoretical part of this document is taken from the fast.ai [Practical Deep Learning for Coders](https://course.fast.ai/) notebooks.\n",
-    "\n",
-    "In you are interested, check out the colab notebooks from the fast.ai course, especially\n",
-    "* [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and \n",
-    "* [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb). \n",
-    "\n",
-    "They cover a lot of fundamentals of neural networks and machine learning in general in more depth."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "marked-christmas",
-   "metadata": {},
-   "source": [
-    "# Machine Learning 101\n",
-    "\n",
     "<img src=\"https://www.onemodel.co/hs-fs/hubfs/U4SezaC-1.png?width=536&name=U4SezaC-1.png\" width=\"300px\"/>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "still-respondent",
+   "id": "aging-rolling",
    "metadata": {},
    "source": [
-    "## Neural Network History\n",
+    "# Introduction to Machine Learning\n",
     "\n",
-    "In 1943, Warren McCulloch, a neurophysiologist, and Walter Pitts, a logician, deveopled a mathematical model of an artificial neuron.\n",
+    "## Goal\n",
+    "* basic high-level understanding of machine learning\n",
+    "* understand the importance of data\n",
+    "* \n",
     "\n",
-    "They realized that a simplified model of a real neuron could be represented using simple addition and thresholding.\n",
-    "\n",
-    "\n",
-    "<a href=\"https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb#scrollTo=tewCOeL7eHhp\"><img src=\"../assets/images/chapter7_neuron.png\" width=\"500px\"/></a>\n",
-    "\n",
-    "\n",
-    "This work was later taken on and further developed by a psychologist names Frank Rosenblatt, giving the artificial neuron the ability to learn. In _The Design of an Intelligent Automaton_, he wrote about this work:\n",
-    "> \"We are now about to witness the birth of such a machine—a machine capable of perceiving, recognizing and identifying its surroundings without any human training or control.\"\n",
-    "\n",
-    "\n",
-    "Although neural networks have been around for a long time, they have only recently started living up to their potential. This is in part due to some misunderstanding of the theoretical issues (in the early years only very few layers were used) but maybe more importantly due to the increased computing power and data availability as well as algorithmic tweaks that allow for faster and easier training.\n",
-    "\n",
-    "We now have what Rosenblatt promised: \"a machine capable of perceiving, recognizing, and identifying its surroundings without any human training or control.\""
+    "**Attribution.** Most of the material in this document is taken from the fast.ai course [Practical Deep Learning for Coders](https://course.fast.ai/), especially the [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and the [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb) notebooks.\n",
+    "In you are interested into machine learning, I highly recommend to check it out! They cover a lot of fundamentals of neural networks and machine learning in general in more depth."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pregnant-personality",
+   "id": "ethical-economy",
+   "metadata": {},
+   "source": [
+    "### Artificial Neurons\n",
+    "\n",
+    "In 1943, Warren McCulloch, a neurophysiologist, and Walter Pitts, a logician, developed a mathematical model of an artificial neuron.\n",
+    "\n",
+    "They realized that a simplified model of a real neuron could be represented using simple addition and thresholding.\n",
+    "\n",
+    "\n",
+    "<img src=\"../assets/images/chapter7_neuron.png\" width=\"500px\"/><a href=\"https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb#scrollTo=tewCOeL7eHhp\">(Image Source)</a>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Neural Networks\n",
+    "\n",
+    "A neural networks is a computing system inspired by biological brains, made up by a collection of connected artifical neurons: \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Colored_neural_network.svg\" width=\"300px\"/><a href=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Colored_neural_network.svg\">(Image Source)</a>\n",
+    "\n",
+    "The term _deep learning_ just refers to neural networks with a lot of layers.\n",
+    "\n",
+    "Although neural networks have been around for a long time, they have only recently started living up to their potential. This is in part due to some misunderstanding of the theoretical issues (in the early years only very few layers were used) but maybe more importantly due to the increased computing power and data availability as well as algorithmic tweaks that allow for faster and easier training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wanted-fence",
    "metadata": {},
    "source": [
     "## What is _Machine Learning_?\n",
     "\n",
     "Deep learning and neural networks are just specific areas in the more general discipline of _machine learning_.\n",
-    "\n",
-    "As we saw in the section above, a neural networks is a computing system inspired by biological brains, made up by a collection of connected units (_artifical neurons_). The term _deep learning_ just refers to neural networks with a lot of layers.\n",
     "\n",
     "_Machine Learning_ in general is, like regular programming, a way to get computers to complete a specific task. But how would we use regular programming to e.g. recognize dogs versus cats in photos? We would have to write down for the computer the exact steps necessary to complete the task.\n",
     "\n",
@@ -78,19 +71,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thrown-economy",
+   "id": "configured-hebrew",
    "metadata": {},
    "source": [
     "<br>\n",
     "<img id=\"traditional_program\" alt=\"A Traditional Program\" src=\"../assets/images/traditional-program.svg\" width=\"500px\"/>\n",
-    "\n",
     "<a href=\"https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb\">(Image Source)</a>\n",
     "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "false-transcript",
+   "id": "cardiovascular-steel",
    "metadata": {},
    "source": [
     "For recognizing objects in a photo, this is a bit tricky: what _are_ the exact steps we take when we recognize an object in a picture? We really don't know, since it all happens in our brain without us being consciously aware of it!\n",
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-marker",
+   "id": "stock-organic",
    "metadata": {},
    "source": [
     "### Using Weight Assignment\n",
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unauthorized-drain",
+   "id": "south-motorcycle",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -138,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consolidated-chase",
+   "id": "invisible-tracy",
    "metadata": {},
    "source": [
     "We've changed the name of our box from _program_ to _model_. This is to follow modern terminology and to reflect that the model is a special kind of program: it's one that can do many different things, depending on the weights. It can be implemented in many different ways.\n",
@@ -148,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "labeled-trauma",
+   "id": "complex-washington",
    "metadata": {},
    "source": [
     "### Training a Machine Learning Model\n",
@@ -164,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passive-isolation",
+   "id": "nonprofit-grass",
    "metadata": {},
    "source": [
     "<img id=\"training_loop\" alt=\"Training a Machine Learning Model\" src=\"../assets/images/training_loop.svg\" width=\"600px\"/>\n",
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-credits",
+   "id": "independent-grocery",
    "metadata": {},
    "source": [
     "Notice the distinction between the model's results (e.g., the moves in a checkers game) and its performance (e.g., whether it wins the game, or how quickly it wins).\n",
@@ -186,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-scholarship",
+   "id": "revolutionary-salad",
    "metadata": {},
    "source": [
     "<img id=\"using_model\" alt=\"Using a Trained Model as a Program\" src=\"../assets/images/using_model.svg\" width=\"500px\"/>\n",
@@ -196,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "covered-sterling",
+   "id": "cooperative-designer",
    "metadata": {},
    "source": [
     "This looks identical to our original diagram <a href=\"#traditional_program\">here</a>, just with the word _program_ replaced with _model_. This is an important insight: a trained model can be treated just like a regular computer program.\n",
@@ -206,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "social-syracuse",
+   "id": "determined-veteran",
    "metadata": {},
    "source": [
     "## What is a Neural Network?\n",
@@ -226,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thirty-possibility",
+   "id": "violent-basket",
    "metadata": {},
    "source": [
     "In other words, to recap, a neural network is a particular kind of machine learning model, which fits right in to Samuel's original conception. Neural networks are special because they are highly flexible, which means they can solve an unusually wide range of problems just by finding the right weights. This is powerful, because stochastic gradient descent provides us a way to find those weight values automatically.\n",
@@ -242,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "devoted-enhancement",
+   "id": "emotional-respect",
    "metadata": {},
    "source": [
     "## A Bit of Deep Learning Jargon\n",
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-acting",
+   "id": "pressing-ballet",
    "metadata": {},
    "source": [
     "<img id=\"detailed_loop\" alt=\"Detailed Training Loop\" src=\"../assets/images/detailed_loop.svg\" width=\"600px\"/>\n",
@@ -271,14 +263,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acting-ghost",
+   "id": "worthy-ivory",
    "metadata": {},
    "source": [
     "## Limitations Inherent to Machine Learning\n",
     "\n",
     "From this picture we can now see some fundamental things about training a deep learning model:\n",
     "\n",
-    "- A model cannot be created without data.\n",
+    "- A model **cannot be created without data**.\n",
     "- A model can only learn to operate on the patterns seen in the input data used to train it.\n",
     "- This learning approach only creates *predictions*, not recommended *actions*.\n",
     "- It's not enough to just have examples of input data; we need *labels* for that data too (e.g., pictures of dogs and cats aren't enough to train a model; we need a label for each one, saying which ones are dogs, and which are cats).\n",
@@ -289,14 +281,14 @@
     "\n",
     "Since these kinds of machine learning models can only make *predictions* (i.e., attempt to replicate labels), this can result in a significant gap between organizational goals and model capabilities. \n",
     "\n",
-    "For instance, in this book you'll learn how to create a *recommendation system* that can predict what products a user might purchase. This is often used in e-commerce, such as to customize products shown on a home page by showing the highest-ranked items. But such a model is generally created by looking at a user and their buying history (*inputs*) and what they went on to buy or look at (*labels*), which means that the model is likely to tell you about products the user already has or already knows about, rather than new products that they are most likely to be interested in hearing about. \n",
+    "For instance, in [this book](https://github.com/fastai/fastbook) you'll learn how to create a *recommendation system* that can predict what products a user might purchase. This is often used in e-commerce, such as to customize products shown on a home page by showing the highest-ranked items. But such a model is generally created by looking at a user and their buying history (*inputs*) and what they went on to buy or look at (*labels*), which means that the model is likely to tell you about products the user already has or already knows about, rather than new products that they are most likely to be interested in hearing about. \n",
     "\n",
     "That's very different to what, say, an expert at your local bookseller might do, where they ask questions to figure out your taste, and then tell you about authors or series that you've never heard of before."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "searching-protocol",
+   "id": "jewish-hayes",
    "metadata": {},
    "source": [
     "# TODO\n",
@@ -307,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supported-aaron",
+   "id": "going-block",
    "metadata": {},
    "outputs": [],
    "source": []
